Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-11193

lsnapshot mount fails with DNE

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.12.0
    • Lustre 2.12.0
    • 3
    • 9223372036854775807

      This issue was created by maloo for sarah <sarah@whamcloud.com>

      This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/44e5d976-9097-11e8-a9f7-52540065bddc

      test_1a failed with the following error:

      (5) Fail to mount lss_1a_0
      

      server/client: lustre-master tag-2.11.53 ZFS DNE

      VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
      sanity-lsnapshot test_1a - (5) Fail to mount lss_1a_0

            utopiabound Nathaniel Clark
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: